[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"
alembic = "^1.10.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
